--- a/kenny/playGround/src/preprocessor.ipynb
+++ b/kenny/playGround/src/preprocessor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -6159,18 +6159,43 @@
       "4014        33189         53   udp     dns      5.005148        78.0          0.0         S0             0             D          2            134          0              0     Benign\n",
       "2869        53177         53   udp     dns      0.000500        45.0         45.0         SF             0            Dd          1             73          1             73     Benign\n",
       "8155        53038       6667   tcp     irc      1.016422        60.0        124.0       RSTR             0       ShAdfDr          5            328          4            328  Malicious\n",
-      "196769      60346         53   udp     dns      0.136424        39.0        103.0         SF             0            Dd          1             67          1            131     Benign\n"
+      "196769      60346         53   udp     dns      0.136424        39.0        103.0         SF             0            Dd          1             67          1            131     Benign\n",
+      "Training data size: 6070\n"
      ]
     }
    ],
    "source": [
     "train_df = train_df.dropna()\n",
-    "print(train_df.to_string())"
+    "print(train_df.to_string())\n",
+    "print(f\"Training data size: {len(train_df)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "Benign       4640\n",
+       "Malicious    1430\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -7618,41 +7643,43 @@
       "8156        52930       6667   tcp     irc     1.680038        75.0       243.0         S3             0       ShAdDaf          7            447          7            615  Malicious\n",
       "818350      47785         80   tcp    http     0.259778       135.0       238.0         SF             0       ShADafF          4            315          4            406     Benign\n",
       "9839        54432       6667   tcp     irc    32.062849        62.0       269.0         S3             0      ShAdDaft          7            446          6            589  Malicious\n",
-      "3959        40121         53   udp     dns     5.005145        78.0         0.0         S0             0             D          2            134          0              0     Benign\n"
+      "3959        40121         53   udp     dns     5.005145        78.0         0.0         S0             0             D          2            134          0              0     Benign\n",
+      "Testing data size: 1441\n"
      ]
     }
    ],
    "source": [
     "test_df = test_df.dropna()\n",
-    "print(test_df.to_string())"
+    "print(test_df.to_string())\n",
+    "print(f\"Testing data size: {len(test_df)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "label\n",
-       "Benign       4640\n",
-       "Malicious    1430\n",
+       "Benign       1144\n",
+       "Malicious     297\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df['label'].value_counts()"
+    "test_df['label'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -7705,7 +7732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -7741,7 +7768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7759,7 +7786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -7901,7 +7928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -8084,7 +8111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -8245,7 +8272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8268,7 +8295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8279,35 +8306,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loss and optimizer\n",
     "\n",
     "criterion = nn.BCELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)"
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Loss: 0.3634, Accuracy: 0.9910\n",
-      "Epoch [20/100], Loss: 0.0612, Accuracy: 0.9924\n",
-      "Epoch [30/100], Loss: 0.0184, Accuracy: 0.9938\n",
-      "Epoch [40/100], Loss: 0.0129, Accuracy: 0.9958\n",
-      "Epoch [50/100], Loss: 0.0101, Accuracy: 0.9965\n",
-      "Epoch [60/100], Loss: 0.0088, Accuracy: 0.9965\n",
-      "Epoch [70/100], Loss: 0.0081, Accuracy: 0.9965\n",
-      "Epoch [80/100], Loss: 0.0076, Accuracy: 0.9965\n",
-      "Epoch [90/100], Loss: 0.0072, Accuracy: 0.9965\n",
-      "Epoch [100/100], Loss: 0.0070, Accuracy: 0.9972\n"
+      "Epoch [10/100], Loss: 0.6623, Accuracy: 0.7946\n",
+      "Epoch [20/100], Loss: 0.6521, Accuracy: 0.7932\n",
+      "Epoch [30/100], Loss: 0.6422, Accuracy: 0.7932\n",
+      "Epoch [40/100], Loss: 0.6326, Accuracy: 0.7932\n",
+      "Epoch [50/100], Loss: 0.6232, Accuracy: 0.7932\n",
+      "Epoch [60/100], Loss: 0.6140, Accuracy: 0.7932\n",
+      "Epoch [70/100], Loss: 0.6049, Accuracy: 0.7932\n",
+      "Epoch [80/100], Loss: 0.5958, Accuracy: 0.7932\n",
+      "Epoch [90/100], Loss: 0.5868, Accuracy: 0.7932\n",
+      "Epoch [100/100], Loss: 0.5777, Accuracy: 0.7932\n"
      ]
     }
    ],
@@ -8338,13 +8365,6 @@
     "            accuracy = (y_predicted_cls == y_test).sum().item() / len(y_test)\n",
     "            print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}, Accuracy: {accuracy:.4f}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
