--- a/kenny/working/ids/Flower_IDS_DNP3_preprocessing.ipynb
+++ b/kenny/working/ids/Flower_IDS_DNP3_preprocessing.ipynb
@@ -591,6 +591,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16aeb94f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a0e6506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b3de05c6-c523-476f-8585-78fb574233a2",
    "metadata": {},
